@@ -6,8 +6,9 @@ use strict;
 our $VERSION = '1.23';
 
 use Padre::Logger;
-use Padre::Unload ();
-use Text::Aspell  ();
+use Padre::Unload  ();
+# use Text::Aspell   ();
+# use Text::Hunspell ();
 
 use Class::XSAccessor {
 	replace   => 1,
@@ -40,73 +41,42 @@ sub new {
 	return $self;
 }
 
-sub new_old {
 
-	# my ( $class, $plugin, $mimetype ) = @_;
-	my ( $class, $mimetype, $iso ) = @_;
-	my $self = {};       # Allocate new memory
-	bless $self, $class; # Mark it of the right type
-	                     # my $self = bless {
-	                     # _ignore => {},
-
-	# # _plugin    => $plugin,
-	# _utf_chars => 0,
-	# }, $class;
-
-	$self->_ignore( {} );
-	$self->_utf_chars(0);
-
-
-	# # create speller object
-	my $speller = Text::Aspell->new;
-
-	# # my $config  = $plugin->config;
-
-	# # TODO: configurable later
-	$speller->set_option( 'sug-mode', 'normal' );
-
-	# # $speller->set_option( 'lang',     $config->{dictionary} );
-	$speller->set_option( 'lang', $iso );
-
-	# #$speller->print_config;  # to STDOUT
-	# # TRACE( "print config info = " . $speller->print_config ) if DEBUG;
-
-	# my $speller = Text::SpellChecker->new(text => $text, from_frozen => $serialized_data, lang => $lang)
-
-	if ( exists $MIMETYPE_MODE{$mimetype} ) {
-		if ( not defined $speller->set_option( 'mode', $MIMETYPE_MODE{$mimetype} ) ) {
-			my $err = $speller->errstr;
-			warn "Could not set aspell mode '$MIMETYPE_MODE{$mimetype}': $err\n";
-		}
-	}
-
-	TRACE( $speller->print_config ) if DEBUG;
-
-	$self->_speller($speller);
-
-	return $self;
-}
 #######
 # _init
 #######
 sub _init {
 
 	# my ( $self, %args ) = @_;
-	my ( $self, $mimetype, $iso ) = @_;
+	my ( $self, $mimetype, $iso, $engine ) = @_;
 
 	$self->_ignore( {} );
 	$self->_utf_chars(0);
+	
+	#just for testing
+	print "Using Text::$engine with language $iso\n";
 
 	# create speller object
-	my $speller = Text::Aspell->new;
+	my $speller;
+	if ( $engine eq 'Aspell' ) {
+		require Text::Aspell;
+		$speller = Text::Aspell->new;
 
-	# my $config  = $plugin->config;
+		# TODO: configurable later
+		$speller->set_option( 'sug-mode', 'normal' );
+		$speller->set_option( 'lang',     $iso );
+	} else {
+		require Text::Hunspell;
+		
+		#TODO add some checking
 
-	# TODO: configurable later
-	$speller->set_option( 'sug-mode', 'normal' );
+		# You can use relative or absolute paths.
+		$speller = Text::Hunspell->new(
+			"/usr/share/hunspell/$iso.aff", # Hunspell affix file
+			"/usr/share/hunspell/$iso.dic"  # Hunspell dictionary file
+		);
 
-	# $speller->set_option( 'lang',     $config->{dictionary} );
-	$speller->set_option( 'lang', $iso );
+	}
 
 	#$speller->print_config;  # to STDOUT
 	# TRACE( "print config info = " . $speller->print_config ) if DEBUG;
@@ -129,7 +99,7 @@ sub _init {
 
 sub check {
 	my ( $self, $text ) = @_;
-	my $speller = $self->_speller;
+	# my $speller = $self->_speller;
 	my $ignore  = $self->_ignore;
 
 	# iterate over word boundaries
@@ -148,7 +118,8 @@ sub check {
 			$self->_count_utf_chars($word);
 			next;
 		}
-		if ( $speller->check($word) ) {
+		# if ( $speller->check($word) ) {
+		if ( $self->_speller->check($word) ) {
 			$self->_count_utf_chars($word);
 			next;
 		}
@@ -169,18 +140,30 @@ sub check {
 	return;
 }
 
-
+#######
+# Method dictionaries
+# only use against Text::Aspell
+#todo change to get_dictionaries
+#######
 sub dictionaries {
 	my ($self) = @_;
 	return grep { $_ =~ /^\w+$/ }
 		map { $_->{name} } $self->_speller->dictionary_info;
 }
 
+#######
+# Method ignore
+#todo change to set_ignore_word
+#######
 sub ignore {
 	my ( $self, $word ) = @_;
 	$self->_ignore->{$word} = 1;
+	return;
 }
-
+#######
+# Method suggestions
+#todo change to get_suggestions
+#######
 sub suggestions {
 	my ( $self, $word ) = @_;
 	return $self->_speller->suggest($word);
@@ -258,3 +241,52 @@ Return suggestions for C<$word>.
 For all related information (bug reporting, source code repository,
 etc.), refer to L<Padre::Plugin::SpellCheck>.
 =cut
+
+
+
+# sub new_old {
+
+	# # my ( $class, $plugin, $mimetype ) = @_;
+	# my ( $class, $mimetype, $iso ) = @_;
+	# my $self = {};       # Allocate new memory
+	# bless $self, $class; # Mark it of the right type
+	                     # # my $self = bless {
+	                     # # _ignore => {},
+
+	# # # _plugin    => $plugin,
+	# # _utf_chars => 0,
+	# # }, $class;
+
+	# $self->_ignore( {} );
+	# $self->_utf_chars(0);
+
+
+	# # # create speller object
+	# my $speller = Text::Aspell->new;
+
+	# # # my $config  = $plugin->config;
+
+	# # # TODO: configurable later
+	# $speller->set_option( 'sug-mode', 'normal' );
+
+	# # # $speller->set_option( 'lang',     $config->{dictionary} );
+	# $speller->set_option( 'lang', $iso );
+
+	# # #$speller->print_config;  # to STDOUT
+	# # # TRACE( "print config info = " . $speller->print_config ) if DEBUG;
+
+	# # my $speller = Text::SpellChecker->new(text => $text, from_frozen => $serialized_data, lang => $lang)
+
+	# if ( exists $MIMETYPE_MODE{$mimetype} ) {
+		# if ( not defined $speller->set_option( 'mode', $MIMETYPE_MODE{$mimetype} ) ) {
+			# my $err = $speller->errstr;
+			# warn "Could not set aspell mode '$MIMETYPE_MODE{$mimetype}': $err\n";
+		# }
+	# }
+
+	# TRACE( $speller->print_config ) if DEBUG;
+
+	# $self->_speller($speller);
+
+	# return $self;
+# }
